[project]
name = "erpnext_gocardless_bank"
authors = [
    {name = "Ameen Ahmed (Level Up)", email = "kid1194@gmail.com"}
]
description = "Gocardless open banking services integration for ERPNext."
keywords = ["frappe", "erpnext", "nordigen", "gocardless", "open banking", "integration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=14.0.0",
    "erpnext>=14.0.0"
]

[project.urls]
Documentation = "https://github.com/monolithon/erpnext_gocardless_bank"
Source = "https://github.com/monolithon/erpnext_gocardless_bank"
